--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </div>
 </div>
 
+<script src="scripts/util.js"></script>
 <script src="scripts/engine.js"></script>
 <script src="scripts/main.js"></script>
 </body>
