--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
     </div>
     <div id="menu-panel">
         <div class="wrapper">
-            Menu
+            <h1>Menu</h1>
+            <div class="panel" id="panel-info-live-count">
+
+            </div>
+            <div class="panel" id="panel-info-death-count">
+
+            </div>
         </div>
     </div>
 </div>
