better collision food grows

--- a/index.html
+++ b/index.html
@@ -14,13 +14,21 @@
     </div>
     <div id="menu-panel">
         <div class="wrapper">
-            <h1>Menu</h1>
-            <div class="panel" id="panel-info-live-count">
+            <div>
+                <h2>Menu</h2>
+                <div class="panel">
+                    <h3>Live Cells</h3>
+                    <div id="panel-info-live-count">
 
+                    </div>
+                </div>
+                <div class="panel">
+                    <h3>Deaths</h3>
+                    <div id="panel-info-death-count">
+                    </div>
+                </div>
             </div>
-            <div class="panel" id="panel-info-death-count">
 
-            </div>
         </div>
     </div>
 </div>
