--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </div>
 </div>
 
+<script src="scripts/behaviours.js"></script>
 <script src="scripts/util.js"></script>
 <script src="scripts/engine.js"></script>
 <script src="scripts/main.js"></script>
