prevent deep recursion in quadtree

--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
     </div>
 </div>
 
-<script src="scripts/behaviours.js"></script>
+<script src="scripts/noise.js"></script>
 <script src="scripts/util.js"></script>
 <script src="scripts/engine.js"></script>
+<script src="scripts/behaviours.js"></script>
 <script src="scripts/main.js"></script>
 </body>
 
