--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="game-panel">
         <div class="wrapper">
             <canvas id="simulation"></canvas>
+            <!--<div class="smoothie-chart-tooltip"></div>-->
         </div>
     </div>
     <div id="menu-panel">
