adding some fancy buttons and play pause functionality

--- a/index.html
+++ b/index.html
@@ -20,15 +20,39 @@
                 <div class="panel">
                     <canvas id="cell-tracker"></canvas>
                 </div>
+                <!--
                 <div class="panel">
                     <h3>Live Cells</h3>
                     <div id="panel-info-live-count">
 
                     </div>
                 </div>
+                -->
                 <div class="panel">
                     <h3>Deaths</h3>
                     <div id="panel-info-death-count">
+                    </div>
+                </div>
+                <div class="panel">
+                    <h3>Genes</h3>
+                    <div id="panel-gene-selection">
+                        <ul>
+                            <li data-gene="freeze">Freeze</li>
+                            <li data-gene="random_walk">Random Walk</li>
+                            <li data-gene="seek_food">Seek Food</li>
+                            <li data-gene="hunt_food">Hunt Food</li>
+
+                            <li data-gene="speed_slow">Slow</li>
+                            <li data-gene="speed_fast">Fast</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="panel">
+                    <h3>Simulation</h3>
+                    <div id="panel-simulation-buttons">
+                        <!-- TODO icons!!!!111-->
+                        <div id="play" class="active">PLAY</div>
+                        <div id="pause" class="negative">PAUSE</div>
                     </div>
                 </div>
             </div>
