--- a/index.html
+++ b/index.html
@@ -61,9 +61,12 @@
     </div>
 </div>
 
+<!--You made this?-->
 <script src="scripts/vendored/smoothie.js"></script>
 <script src="scripts/vendored/open-simplex-noise.js"></script>
+<!--I made this!-->
 <script src="scripts/util.js"></script>
+<script src="scripts/behavior-tree.js"></script>
 <script src="scripts/engine.js"></script>
 <script src="scripts/behaviours.js"></script>
 <script src="scripts/main.js"></script>
