debug help on screen

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
                         <!-- TODO icons!!!!111-->
                         <div id="play" class="active">PLAY</div>
                         <div id="pause" class="negative">PAUSE</div>
+                        <div id="warp" >WARP</div>
+                        <div id="tick" class="inactive">TICK</div>
                     </div>
+
                 </div>
             </div>
 
