--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="panel">
                     <div id="panel-gene-selection">
-                        <div id="tree" class="inactive"><span class="fas fa-code-fork"></span> Behaviour Tree</div>
+                        <div id="tree" class="inactive">Behaviour Tree</div>
                         <ul>
                             <!-- generated -->
                         </ul>
@@ -44,6 +44,15 @@
                 <div class="clear-float"></div>
                 <div class="panel">
                     <div id="panel-gene-info">
+                    </div>
+                </div>
+
+                <div class="panel">
+                    <div id="panel-gene-info2">
+                        <b>You start with nothing</b><br>
+                        Drag behaviours from the right into your behaviour tree on the left.<br>
+                        Hover over the Icons to find out what each behaviour does.<br>
+                        May the fittest survive!
                     </div>
                 </div>
 
