restarting worlds was never so easy

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                             <div id="warp" class="fas fa-fast-forward"></div>
                             <div id="tick" class="fas fa-step-forward inactive"></div>
                         </div>
+                        <div>
+                            <div id="restart" class="">Restart World</div>
+                        </div>
                         <span class="clear-float"></span>
                     </div>
 
