better node-2-decorator render

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>LD45 - Behaviour Engineer</title>
+    <title>Behaviour Engineer - LD45</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="vendored/fontawesome/css/all.min.css">
 </head>
