--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                         <b>You start with nothing</b><br>
                         Drag behaviours from the right into your behaviour tree on the left.<br>
                         Hover over the Icons to find out what each behaviour does.<br>
+                        When a new cell is spawned, either by splitting or by clicking in the world while there is no cell of color alive, it will adopt the new tree.
                         May the fittest survive!
                     </div>
                 </div>
